# icon-gen

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md  compile_commands.json  icon_gen.cc  icon_gen.def  icon_gen.h
cmake/: FindCairo.cmake  FindHarfBuzz.cmake  FindSkia.cmake
prototype/: README.md  icon-previews-dart.patch  icon-previews-vsc.patch
